<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".NewprofileActivity">


    <ImageView
        android:id="@+id/ivBackArrow"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/arrowleft"
        android:contentDescription="@string/arrowleft"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp" />

    <ImageView
        android:id="@+id/ivSettings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/settings"
        android:contentDescription="@drawable/settings"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"/>



    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/propic"
        android:scaleType="centerCrop"
        android:background="@drawable/circle_background"
        android:padding="3dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <ImageView
        android:id="@+id/editProfileIcon"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/add1"
        app:layout_constraintBottom_toBottomOf="@id/profileImage"
        app:layout_constraintEnd_toEndOf="@id/profileImage"
        android:layout_marginEnd="-5dp"
        android:layout_marginBottom="-5dp"/>


    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_prof_username"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/userTagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_prof_tagline"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/new_prof_edit"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/buttonColor"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/userTagline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <LinearLayout
        android:id="@+id/statsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnEditProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gg1"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:padding="16dp"/>

        <TextView
            android:id="@+id/posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gg3"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:padding="16dp"/>

        <TextView
            android:id="@+id/followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gg2"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:padding="16dp"/>
    </LinearLayout>


    <TextView
        android:id="@+id/destinationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_vd"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/statsLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <LinearLayout
        android:id="@+id/destinationList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/destinationTitle">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            android:backgroundTint="@color/buttonColor">

            <TextView
                android:id="@+id/destination1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/npd1"
                android:textColor="@color/white"
                android:padding="14dp"
                android:textSize="16sp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            android:backgroundTint="@color/buttonColor">

            <TextView
                android:id="@+id/destination2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/npd2"
                android:textColor="@color/white"
                android:padding="14dp"
                android:textSize="16sp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            android:backgroundTint="@color/buttonColor">

            <TextView
                android:id="@+id/destination3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/npd3"
                android:textColor="@color/white"
                android:padding="14dp"
                android:textSize="16sp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            android:backgroundTint="@color/buttonColor">

            <TextView
                android:id="@+id/destination4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/npd4"
                android:textColor="@color/white"
                android:padding="14dp"
                android:textSize="16sp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            android:backgroundTint="@color/buttonColor">

            <TextView
                android:id="@+id/destination5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/npd5"
                android:textColor="@color/white"
                android:padding="14dp"
                android:textSize="16sp"/>
        </androidx.cardview.widget.CardView>



    </LinearLayout>
    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
