<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main11"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackground"
    tools:context=".ProfileActivity">


    <View
        android:id="@+id/bgAccent"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:background="@drawable/bg_gradient"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/textTravella"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:shadowColor="#66000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>


    <ImageView
        android:id="@+id/ivSettings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/settings"
        android:contentDescription="@drawable/settings"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"/>


    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/propic"
        android:scaleType="centerCrop"
        android:layout_marginTop="100dp"
        android:background="@drawable/circle_background"
        android:padding="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="8dp"/>


    <ImageView
        android:id="@+id/ivEditProfile"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/edit"
        android:background="@drawable/circle_background"
        android:padding="6dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@id/imageViewProfile"
        app:layout_constraintEnd_toEndOf="@id/imageViewProfile"
        android:elevation="10dp"
        android:layout_marginBottom="-8dp"
        android:layout_marginEnd="-8dp"/>


    <TextView
        android:id="@+id/textUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_name"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imageViewProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>


    <TextView
        android:id="@+id/textUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_description"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textUserName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"/>


    <Button
        android:id="@+id/buttonEditProfile"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/edit_profile"
        android:textColor="@color/buttonTextColor"
        android:backgroundTint="@color/buttonColor"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/textUserEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawablePadding="8dp"
        android:elevation="4dp"/>


    <TextView
        android:id="@+id/textVisitedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visited_des"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/buttonEditProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <LinearLayout
        android:id="@+id/destinationsContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/textVisitedTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <TextView
            android:id="@+id/destination1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/destination1"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:padding="12dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/destination_box"
            android:elevation="4dp"/>

        <TextView
            android:id="@+id/destination2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/destination2"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:padding="12dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/destination_box"
            android:elevation="4dp"/>

        <TextView
            android:id="@+id/destination3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/destination3"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:padding="12dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/destination_box"
            android:elevation="4dp"/>


        <TextView
            android:id="@+id/textTotalVisited"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/totaldestinations"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center"
            android:padding="16dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/destination_box"
            android:elevation="6dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
